--- a/src/main/resources/static/css/movies.css
+++ b/src/main/resources/static/css/movies.css
@@ -215,6 +215,7 @@ nav ul {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background: #fff;
 }
 
 .movie-chart .movie-list .item .item-tit {
@@ -268,6 +269,7 @@ nav ul {
     align-items: center;
     flex: 1;
     line-height: 0;
+    background: #fff;
 }
 
 .movie-chart .movie-list .item .item-btn .reservation-btn {
@@ -674,6 +676,63 @@ nav ul {
 	80% { scale: 1.2; rotate: 8deg; }
 	100% { scale: 1.1; rotate: 0deg; }
 } */
+
+/* main */
+.box-office {
+    background: #000;
+    background: linear-gradient(to right, rgba(0, 111, 124, 1) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 111, 124, 1) 100%);
+    position: relative;
+}
+.box-office:after {
+    content:'';
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    background: url(https://www.megabox.co.kr/static/pc/images/movie/bg-movie-detail-pattern.png) repeat 0 0;
+    pointer-events: none;
+}
+
+.box-office .top {
+    color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    padding: 0 0 1.75rem;
+}
+.box-office .top p {
+    font-size: 18px;
+    font-weight: 600;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #fff;
+}
+.box-office .top a {
+    position: absolute;
+    right: 0;
+    display: flex;
+    align-items: center;
+    line-height: 0;
+    gap: 5px;
+    cursor: pointer;
+}
+.box-office .top a img {
+    filter: brightness(2);
+    width: 14px;
+}
+
+
+.box-office .movie-chart {
+    padding: 4rem 0;
+    z-index: 2;
+    position: relative;
+}
+
+.box-office .movie-chart .movie-list .item .item-tit h5,
+.box-office .movie-chart .movie-list .item .item-info {color:#fff;}
+
 
 
 /* admin */
