--- a/src/main/resources/templates/main/main.mustache
+++ b/src/main/resources/templates/main/main.mustache
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="/css/main.css?v={{ timestamp }}" />
 {{> common/header }}
-
+{{> movies/rank }}
 <div class="container">
   <h2>현재 상영 중인 영화</h2>
   <ul>
