메뉴-구현안된페이지 alert창 안내 추가

--- a/src/main/resources/templates/common/header.mustache
+++ b/src/main/resources/templates/common/header.mustache
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretendard@latest/dist/web/static/pretendard.css" />
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/common.css?v={{ timestamp }}" />
-    <!-- 제이쿼리 -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <!-- 공통 JS -->
-    <script src="/js/common.js?v={{ timestamp }}"></script>
 </head>
 
 <body>
@@ -97,18 +93,18 @@
                     </ul>
                 </li>
                 <li><a href="/ticketing">예매</a></li>
-                <li><a href="/cinemas">극장</a></li>
+                <li><a href="#">극장</a></li>
                 <li>
-                    <a href="/event">이벤트</a>
+                    <a href="#">이벤트</a><!-- /event  -->
                     <ul class="submenu">
                         <div class="submenu-inner">
-                            <li><a href="/event">진행중인 이벤트</a></li>
-                            <li><a href="/event/end">지난 이벤트</a></li>
-                            <li><a href="/event/winner">당첨자 발표</a></li>
+                            <li><a href="#">진행중인 이벤트</a></li><!-- /event  -->
+                            <li><a href="#">지난 이벤트</a></li><!-- /event/end  -->
+                            <li><a href="#">당첨자 발표</a></li><!-- /event/winner  -->
                         </div>
                     </ul>
                 </li>
-                <li><a href="/store">스토어or혜택안내</a></li>
+                <li><a href="#">스토어or혜택안내</a></li><!-- /store -->
             </ul>
         </nav>
     </header>
