--- a/src/main/resources/static/css/ticketing.css
+++ b/src/main/resources/static/css/ticketing.css
@@ -1,5 +1,6 @@
 *{outline:none; border: none; background: transparent; font: inherit;}
 *, :after, :before {box-sizing:border-box;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;}
+
 .container {
     width: 100%;
     max-width: 1200px;
@@ -25,6 +26,7 @@
     border-left: 1px solid #ccc;
     overflow: hidden;
 }
+
 .step {
     overflow: hidden;
     height: 100%;
@@ -33,6 +35,7 @@
 .time-choice {
     border-right: 1px solid #ccc;
 }
+
 .time-choice #step4 {padding: 1rem;     border-bottom: 1px solid #ccc;}
 .time-choice button.date-optionbutton {
     width: 30px;
@@ -48,6 +51,9 @@
     width: 100%;
     gap: .5rem;
 }
+
+#timeSlots div:last-child .time-slot {border-bottom:0;}
+
 .time-slot {
     border-bottom: 1px solid #ccc;
     padding: 1rem;
@@ -65,10 +71,12 @@
 .time-slot strong {
     line-height: 1.2;
 }
+
 .time-slot .start-time {
     font-weight: 600;
     font-size: 20px;
 }
+
 .time-slot .info {
     display: flex;
     flex-direction: column;
@@ -77,8 +85,11 @@
     gap: 5px;
 }
 
-.time-slot .info span:nth-child(2) {
+.time-slot .info .screen-name {
     font-weight: 600;
+}
+.time-slot .info .screen-type {
+    font-weight: 400;
 }
 
 h3 {
@@ -102,12 +113,18 @@ h3 {
     cursor: pointer;
 }
 
-.movie-item .tit {display:flex;}
+.movie-item .tit {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    font-weight: 600;
+}
 
 .movie-item.selected {
     background: #006f7c;
     color: #fff;
 }
+
 .theater-wrap {display: flex; height: calc(100% - 50px);}
 .theater-wrap .step {width: 50%; }
 .theater-wrap button {
@@ -117,8 +134,104 @@ h3 {
     width: 100%;
     text-align: left;
 }
+
 #regionList { border-right: 1px solid #ccc; height: 100%; padding: 1rem}
 #cinemaList {height: 100%; padding: 1rem;}
 
 .running-time {opacity:0;}
 .btn-primary { background: #006f7c; color: #fff;}
+
+.custom-modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.custom-modal-content {
+    background: #fff;
+    width: 80%;
+    height: 90%;
+    overflow-y: auto;
+    border-radius: 10px;
+    position: relative;
+    max-height: 400px;
+    max-width: 500px;
+}
+
+.custom-modal-content .modal-top {
+    background: #006f7c;
+    color: #fff;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    position: relative;
+    padding: 1rem;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
+.custom-modal-content .modal-top .close-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 1rem;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    cursor: pointer;
+    color: #fff;
+    padding: 0;
+    line-height: 0;
+}
+
+.custom-modal-content .tit {
+    font-weight: 600;
+    font-size: 18px;
+    display: flex;
+    line-height: 1;
+    align-items: center;
+    gap: 5px;
+}
+
+#confirmShowtimeInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 2rem 1rem;
+
+}
+
+.movie-grade {
+    display:inline-block;
+    width: 23px;
+    height: 23px;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    color: transparent;
+}
+
+.movie-grade.age-ALL {
+    background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/ALL_46x46.png);
+}
+
+.movie-grade.age-12 {
+    background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/12_46x46.png);
+}
+
+.movie-grade.age-15 {
+    background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/15_46x46.png);
+}
+
+.movie-grade.age-19 {
+    background-image: url(https://img.megabox.co.kr/static/pc/images/common/txt/19_46x46.png);
+}
