250724 관람평 수정

--- a/src/main/resources/templates/movies/view.mustache
+++ b/src/main/resources/templates/movies/view.mustache
@@ -101,7 +101,7 @@
                                             <div class="card-inner">
                                                 <div class="cart-cont">
                                                     <p class="user bold600">{{userName}}</p>
-                                                    <p class="date">{{createdAt}}</p>
+                                                    <p class="date format-date">{{createdAt}}</p>
                                                     <p class="card-text">{{{content}}}</p>
                                                     {{#deletable}}
                                                     <div class="btn-wrap">
@@ -154,7 +154,7 @@
                                                 <div class="card-inner">
                                                     <div class="cart-cont">
                                                         <p class="user bold600">{{userName}}</p>
-                                                        <p class="date">{{createdAt}}</p>
+                                                        <p class="date format-date">{{createdAt}}</p>
                                                         <p class="card-text">{{{content}}}</p>
                                                         {{#deletable}}
                                                             <div class="cart-delete">
