--- a/src/main/resources/templates/movies/view.mustache
+++ b/src/main/resources/templates/movies/view.mustache
@@ -157,7 +157,8 @@
                                                         <p class="date format-date">{{createdAt}}</p>
                                                         <p class="card-text">{{{content}}}</p>
                                                         {{#deletable}}
-                                                            <div class="cart-delete">
+                                                            <div class="btn-wrap">
+                                                                <button class="edit-review-btn" data-review-id="{{reviewId}}">수정</button>
                                                                 <a href="/reviews/delete/{{reviewId}}?movieId={{movieId}}" class="btn btn-sm btn-outline-danger"
                                                                 onclick="return confirm('정말로 이 리뷰를 삭제하시겠습니까?');">삭제</a>
                                                             </div>
