마이페이지 수정중

--- a/src/main/resources/templates/mypage/bookinglist.mustache
+++ b/src/main/resources/templates/mypage/bookinglist.mustache
@@ -22,7 +22,7 @@
             </div>
 
             <div class="booking-body">
-                <img src="/images/posters/{{mainImageUrl}}" alt="{{movieTitle}}" class="poster" />
+                <img src="/images/movie/{{mainImageUrl}}" alt="{{movieTitle}}" class="poster" />
                 <div class="booking-area">
                     <p class="status {{paymentStatusClass}}">{{paymentStatusText}}</p>
                     <div class="booking-info">
