--- a/src/main/resources/templates/mypage/bookingdetail.mustache
+++ b/src/main/resources/templates/mypage/bookingdetail.mustache
@@ -27,7 +27,7 @@
     <div class="detail-contents detail-card">
         <h3 class="status {{detail.status}}">{{detail.status}}</h3>
         <div class="detail-contents-info">
-            <img src="/images/posters/{{detail.mainImageUrl}}" alt="{{detail.movieTitle}}" />
+            <img src="/images/movie/{{detail.mainImageUrl}}" alt="{{detail.movieTitle}}" />
             <div class="detail-contents-info-right">
                 <p class="movie-title">{{detail.movieTitle}}</p>
                 <p>상영시간: {{detail.showtimeStart}} ~ {{detail.showtimeEnd}}</p>
