마이페이지 수정

--- a/src/main/resources/static/css/mypage/bookinglist.css
+++ b/src/main/resources/static/css/mypage/bookinglist.css
@@ -67,15 +67,15 @@
 .booking-area {
 }
 
-.status-confirmed {
+.status.confirmed {
   color: #006f7c;
 }
 
-.status-cancelled {
+.status.cancelled {
   color: #e60000;
 }
 
-.status-unknown {
+.status.unknown {
   color: #777;
 }
 
