--- a/src/main/resources/templates/support/supportLayout.mustache
+++ b/src/main/resources/templates/support/supportLayout.mustache
@@ -1,5 +1,5 @@
 {{> common/header }}
-<link rel="stylesheet" href="/css/support/support.css?v={{ timestamp }}" />
+<link rel="stylesheet" href="/css/support/supportLayout.css?v={{ timestamp }}" />
 
 
 <div class="container support-container">
