--- a/src/main/resources/templates/mypage/bookinglist.mustache
+++ b/src/main/resources/templates/mypage/bookinglist.mustache
@@ -24,7 +24,7 @@
             <div class="booking-body">
                 <img src="/images/movie/{{mainImageUrl}}" alt="{{movieTitle}}" class="poster" />
                 <div class="booking-area">
-                    <p class="status {{paymentStatusClass}}">{{paymentStatusText}}</p>
+                    <p class="status {{statusClass}}">{{status}}</p>
                     <div class="booking-info">
                         <p class="movie-title">{{movieTitle}}</p>
                         <p class="showtime">{{formattedShowtimeStart}}</p>
@@ -40,5 +40,3 @@
         {{/reservations}}
     </div>
 </div>
-
-<script src="/js/mypage/bookinglist.js"></script>
