--- a/src/main/resources/templates/mypage/myinquiry.mustache
+++ b/src/main/resources/templates/mypage/myinquiry.mustache
@@ -37,4 +37,11 @@
         </tbody>
 
     </table>
+    <div class="pagination">
+        <a href="#" class="page prev">«</a>
+        <a href="#" class="page active">1</a>
+        <a href="#" class="page">2</a>
+        <a href="#" class="page">3</a>
+        <a href="#" class="page next">»</a>
+    </div>
 </div>
