--- a/src/main/resources/templates/support/myinquiry.mustache
+++ b/src/main/resources/templates/support/myinquiry.mustache
@@ -37,7 +37,12 @@
             {{/myInquiries}}
         </tbody>
 
-
-        </tbody>
     </table>
+    <div class="pagination">
+        <a href="#" class="page prev">«</a>
+        <a href="#" class="page active">1</a>
+        <a href="#" class="page">2</a>
+        <a href="#" class="page">3</a>
+        <a href="#" class="page next">»</a>
+    </div>
 </div>
